# TableTennis_Software_Firmware

./: .gitignore  requirements.txt
motor_control/: .mxproject  .project  CMakeLists.txt  STM32C031C6Tx_FLASH.ld  motor_control.ioc
motor_control/.metadata/: .log4j2.xml  version.ini
motor_control/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
motor_control/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
motor_control/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
motor_control/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
motor_control/Core/Inc/: FreeRTOSConfig.h  app_freertos.h  main.h  stm32c0xx_hal_conf.h  stm32c0xx_it.h
motor_control/Core/Src/: app_freertos.c  main.c  stm32c0xx_hal_msp.c  stm32c0xx_hal_timebase_tim.c  stm32c0xx_it.c
motor_control/Drivers/BSP/STM32C0xx_Nucleo/: stm32c0xx_nucleo.c  stm32c0xx_nucleo.h  stm32c0xx_nucleo_conf_template.h  stm32c0xx_nucleo_errno.h
motor_control/EWARM/: Project.eww  motor_control.ewd  motor_control.ewp  stm32c031xx_flash.icf  stm32c031xx_sram.icf
motor_control/cmake/: gcc-arm-none-eabi.cmake
motor_control/cmake/stm32cubemx/: CMakeLists.txt
output_cam2/: calibration_data.pkl  camera_matrix.txt  distortion_coefficients.txt
output_cam2_new/: calibration_data.pkl  camera_matrix.txt  distortion_coefficients.txt  rms_error.txt
setup/camera_calibration/: camera_calibration.py  capture_calibration_images.py  capture_camera_calibration.py  test_camera_performance.py
top_level_control/: readME.md
top_level_control/config/: stereo_config.yaml
top_level_control/mac_env/: pyvenv.cfg
top_level_control/output_cam1/: calibration_data.pkl  camera_matrix.txt  distortion_coefficients.txt  rms_error.txt
top_level_control/output_cam2_new/: calibration_data.pkl  camera_matrix.txt  distortion_coefficients.txt  rms_error.txt
top_level_control/scripts/: test_calibration_loading.py  test_camera_feed.py  test_stereo_detection.py
top_level_control/setup/: setup_tests.py
top_level_control/setup/camera_calibration/: calibrate_stereo_extrinsics.py  camera_calibration.py  capture_calibration_images.py  live_undistorted.py  simple_measure.py
top_level_control/tracking/: __init__.py  ball_tracker.py  physics_model.py  physics_model_2d_radiusbased.py  stereo_tracker.py  triangulation.py
