cmake_minimum_required(VERSION 3.22)

project(stm32cubemx)
add_library(stm32cubemx INTERFACE)

# Enable CMake support for ASM and C languages
enable_language(C ASM)

target_compile_definitions(stm32cubemx INTERFACE 
	USE_NUCLEO_64 
	USE_HAL_DRIVER 
	STM32C031xx
    $<$<CONFIG:Debug>:DEBUG>
)

target_include_directories(stm32cubemx INTERFACE
    ../../Core/Inc
    ../../Drivers/STM32C0xx_HAL_Driver/Inc
    ../../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy
    ../../Drivers/BSP/STM32C0xx_Nucleo
    ../../Drivers/CMSIS/Device/ST/STM32C0xx/Include
    ../../Drivers/CMSIS/Include
    ../../Middlewares/Third_Party/FreeRTOS/Source/include/
    ../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/
    ../../Middlewares/Third_Party/CMSIS/RTOS2/Include/
    ../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM0/
)

target_sources(stm32cubemx INTERFACE
    ../../Core/Src/main.c
    ../../Core/Src/app_freertos.c
    ../../Core/Src/stm32c0xx_it.c
    ../../Core/Src/stm32c0xx_hal_msp.c
    ../../Core/Src/stm32c0xx_hal_timebase_tim.c
    ../../Drivers/BSP/STM32C0xx_Nucleo/stm32c0xx_nucleo.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_usart_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_cortex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_rcc.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_rcc_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_flash.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_flash_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_gpio.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_dma.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_dma_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_pwr.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_pwr_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_exti.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_tim.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_tim_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_uart.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_uart_ex.c
    ../../Drivers/STM32C0xx_HAL_Driver/Src/stm32c0xx_hal_usart.c
    ../../Core/Src/system_stm32c0xx.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/croutine.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/event_groups.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/list.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/queue.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/stream_buffer.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/tasks.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/timers.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM0/port.c
    ../../Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c
    ../../Core/Src/sysmem.c
    ../../Core/Src/syscalls.c
    ../../startup_stm32c031xx.s
)

target_link_directories(stm32cubemx INTERFACE
)

target_link_libraries(stm32cubemx INTERFACE
)

# Validate that STM32CubeMX code is compatible with C standard
if(CMAKE_C_STANDARD LESS 11)
    message(ERROR "Generated code requires C11 or higher")
endif()


